--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "@mui/icons-material": "^5.15.13",
     "@mui/material": "^5.15.13",
     "@types/google.maps": "^3.55.5",
+    "formik": "^2.4.6",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
-    "swiper": "^11.0.7"
+    "swiper": "^11.0.7",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^20",
