--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "@mui/icons-material": "^5.15.13",
     "@mui/material": "^5.15.13",
     "@types/google.maps": "^3.55.5",
+    "clsx": "^2.1.1",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.52.1",
     "swiper": "^11.0.7",
+    "tailwind-merge": "^2.5.4",
     "zod": "^3.23.8"
   },
   "devDependencies": {
