--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
     "@googlemaps/react-wrapper": "^1.1.35",
+    "@heroicons/react": "^2.2.0",
     "@hookform/resolvers": "^3.8.0",
     "@mui/icons-material": "^5.15.13",
     "@mui/material": "^5.15.13",
