pr-55 - upgrade Next to v15 and React to v19

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,11 @@
 {
   "compilerOptions": {
     "baseUrl": ".",
-    "lib": ["dom", "dom.iterable", "esnext"],
+    "lib": [
+      "dom",
+      "dom.iterable",
+      "esnext"
+    ],
     "allowJs": true,
     "skipLibCheck": true,
     "strict": true,
@@ -19,13 +23,26 @@
       }
     ],
     "paths": {
-      "@/*": ["./*"],
-      "@app/*": ["src/app/*"],
-      "@utilities/*": ["src/utilities/*"],
-      "@lib/*": ["src/lib/*"],
-      "@homepage/*": ["src/app/(website)/(homepage)/*"],
-      "@auth/*": ["src/app/(auth)/*"]
-    }
+      "@/*": [
+        "./*"
+      ],
+      "@app/*": [
+        "src/app/*"
+      ],
+      "@utilities/*": [
+        "src/utilities/*"
+      ],
+      "@lib/*": [
+        "src/lib/*"
+      ],
+      "@homepage/*": [
+        "src/app/(website)/(homepage)/*"
+      ],
+      "@auth/*": [
+        "src/app/(auth)/*"
+      ]
+    },
+    "target": "ES2017"
   },
   "include": [
     "next-env.d.ts",
@@ -34,5 +51,7 @@
     ".next/types/**/*.ts",
     "."
   ],
-  "exclude": ["node_modules"]
+  "exclude": [
+    "node_modules"
+  ]
 }
