Create checkbox component (#11)
* Create checkbox component

* Adjust sign in form

* Delete console logs

* Remove non-label part of label component, add htmlFor to labels

* Change prop name

* Format changed files with prettier

--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
   "dependencies": {
     "@heroicons/react": "^2.2.0",
     "@hookform/resolvers": "^3.8.0",
+    "clsx": "^2.1.1",
     "next": "^15.0.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.52.1",
     "swiper": "^11.0.7",
+    "tailwind-merge": "^2.5.4",
     "zod": "^3.23.8"
   },
   "devDependencies": {
