--- a/tsconfig.json
+++ b/tsconfig.json
@@ -49,7 +49,8 @@
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts",
-    "."
+    ".",
+    ".lintstagedrc.mjs",
   ],
   "exclude": [
     "node_modules"
