fix(imports): use path aliases

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -35,6 +35,9 @@
       "@lib/*": [
         "src/lib/*"
       ],
+      "@customtypes/*": [
+        "src/types/*"
+      ],
       "@homepage/*": [
         "src/app/(website)/(homepage)/*"
       ],
