fix(imports): use path aliases

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -35,6 +35,12 @@
       "@lib/*": [
         "src/lib/*"
       ],
+      "@customtypes/*": [
+        "src/types/*"
+      ],
+      "@services/*": [
+        "src/services/*"
+      ],
       "@homepage/*": [
         "src/app/(website)/(homepage)/*"
       ],
