fix(imports): add missing aliases

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -38,6 +38,9 @@
       "@customtypes/*": [
         "src/types/*"
       ],
+      "@services/*": [
+        "src/services/*"
+      ],
       "@homepage/*": [
         "src/app/(website)/(homepage)/*"
       ],
