--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,27 +24,12 @@
     ],
     "paths": {
       "@/*": [
-        "./*"
+        "src/*"
       ],
-      "@app/*": [
-        "src/app/*"
-      ],
-      "@utilities/*": [
-        "src/utilities/*"
-      ],
-      "@lib/*": [
-        "src/lib/*"
-      ],
-      "@customtypes/*": [
-        "src/types/*"
-      ],
-      "@services/*": [
-        "src/services/*"
-      ],
-      "@homepage/*": [
+      "@/homepage/*": [
         "src/app/(website)/(homepage)/*"
       ],
-      "@auth/*": [
+      "@/auth/*": [
         "src/app/(auth)/*"
       ]
     },
