Add fetching user action (#28)
* Add fetching user action

* fix(get-user): req headers, date type

* fix(imports): use path aliases

* Add login and register action (#29)

* Add login and register action

* fix(auth): delete duplicated or redundant code

* fix(imports): use path aliases

* fix(imports): add missing aliases

* fix(imports): simplify aliases, adjust imports

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,21 +24,12 @@
     ],
     "paths": {
       "@/*": [
-        "./*"
+        "src/*"
       ],
-      "@app/*": [
-        "src/app/*"
-      ],
-      "@utilities/*": [
-        "src/utilities/*"
-      ],
-      "@lib/*": [
-        "src/lib/*"
-      ],
-      "@homepage/*": [
+      "@/homepage/*": [
         "src/app/(website)/(homepage)/*"
       ],
-      "@auth/*": [
+      "@/auth/*": [
         "src/app/(auth)/*"
       ]
     },
