--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "test": "vitest",
     "test:watch": "vitest --watch",
     "lint": "next lint",
     "pretty": "prettier --check \"src/**/*.*\"",
@@ -21,6 +22,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.52.1",
+    "react-hot-toast": "^2.5.2",
     "swiper": "^11.0.7",
     "tailwind-merge": "^2.5.4",
     "zod": "^3.23.8"
